--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,11 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.43.0.0</version>
+    </dependency>
+
   </dependencies>
 </project>
